--- a/servicio-cursos.yml
+++ b/servicio-cursos.yml
@@ -7,12 +7,10 @@ spring:
 #spring.datasource.url=jdbc:mysql://remotemysql.com:3306/f7KvEa34iU?serverTimezone=UTC
 #spring.datasource.username=f7KvEa34iU
 #spring.datasource.password=8ZDdHOqZLR
-
   jpa:
     hibernate:
-      naming:
-        implicit-strategy:  org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-        physical-strategy:  org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+      naming.implicit-strategy:  org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+      naming.physical-strategy:  org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 server:
   port: 0
 eureka:
