--- a/servicio-cursos.yml
+++ b/servicio-cursos.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://db4free.net:3306/jpmsql?serverTimezone=UTC
     username: jpmuser
     password: jpmtest123
