--- a/servicio-cursos.yml
+++ b/servicio-cursos.yml
@@ -19,3 +19,4 @@ eureka:
       defaultZone: http://localhost:8761/eureka
   instance:
     instanceId: ${random.value}:${spring.application.name}
+    hostname: localhost
