--- a/servicio-cursos.yml
+++ b/servicio-cursos.yml
@@ -19,4 +19,4 @@ eureka:
       defaultZone: http://localhost:8761/eureka
   instance:
     instanceId: ${random.value}:${spring.application.name}
-    hostname: localhost
+    hostname: 192.168.89.40
