--- a/servicio-formaciones.yml
+++ b/servicio-formaciones.yml
@@ -3,5 +3,5 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone:  http://localhost:8761/eureka
+      defaultZone:  http://192.168.89.40:8761/eureka
     register-with-eureka: false
